--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
             <div class="col">
                 <!-- Latitude header -->
                 <div class="box">
-                    <h2>Latitude</h2>
+                    <a href="index.html"><h2>Latitude</h2></a>
                 </div>
             </div>
             <div class="col">
                 <!-- navbar -->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a href="#Data">Data</a>
-                    <a href="#Comparison">Comparison</a>
+                    <a href="data.html">Data</a>
+                    <a href="comparison.html">Comparison</a>
                     <div class="dropdown show">
                         <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Plots
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                          <a class="dropdown-item" href="#">Action</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <a class="dropdown-item" href="#">Something else here</a>
+                          <a class="dropdown-item" href="humidity.html">Humidity</a>
+                          <a class="dropdown-item" href="temp.html">Max Temp</a>
+                          <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+                          <a class="dropdown-item" href="windspeed.html">Wind Speed</a>
                         </div>
                       </div>
                 </nav>
@@ -45,10 +46,10 @@
             </div>
             <div class="col">
                 <p>Links to the visualizations. Click the plots to be taken to the Visualization's page.</p>
-                <img href= "#" class= "img2" src="Visualizations/citytemp_v_lat.png">
-                <img href= "#" class= "img2" src="Visualizations/city_cloudiness_v_lat.png">
-                <img href= "#" class= "img2" src="Visualizations/city_humidity_v_lat.png">
-                <img href= "#" class= "img2"src="Visualizations/city_windspeed_v_lat.png">
+                <a href= "temp.html"><img class= "img2" src="Visualizations/citytemp_v_lat.png"></a>
+                <a href= "cloudiness.html"><img class= "img2" src="Visualizations/city_cloudiness_v_lat.png"></a>
+                <a href= "humidity.html"><img class= "img2" src="Visualizations/city_humidity_v_lat.png"></a>
+                <a href= "windspeed.html"><img  class= "img2"src="Visualizations/city_windspeed_v_lat.png"></a>
             </div>
         </div>
     </div>
