--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="col">
                 <h3>Summary: Latitude vs. X</h3>
                 <img src="Visualizations/citytemp_v_lat.png">
-                <p> The webpage demonstrates</p>
+                <p> The webpage demonstrates the changes in weather patterns in cities across the globe with in comparison to their latitudes. Please select any of the images on the right to get a closer look at how the temperature, cloudiness, windspeed, and humidity changes with respect to Latitude.</p>
             </div>
             <div class="col">
                 <p>Links to the visualizations. Click the plots to be taken to the Visualization's page.</p>
