--- a/temp.html
+++ b/temp.html
@@ -41,7 +41,7 @@
             <div class="col">
                 <h3>Summary: Maximum Temperature vs. Latitude</h3>
                 <img src="Visualizations/citytemp_v_lat.png">
-                <p> This plot visualizes the maximum temperature of cities versus their latitudes.</p>
+                <p> This plot visualizes the maximum temperature of cities versus their latitudes. As expected, the farther the cities get from the equator the colder the maximum temperature observation. </p>
             </div>
         </div>
     </div>
